--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<div class="col-lg-3 col-md-4 col-sm-6">
 					<li class="ro "><i class="glyphicon glyphicon-hand-down"></i>作业项目
 						<ul>
-							<li class="row1 "><a href="../美的官网/index.html">美的官网</a></li>
+							<li class="row1 "><a href="美的官网/index.html">美的官网</a></li>
 							<li class="row1"><a href="../理解布局的一般性方法/index.html">常见布局</a></li>
 							<li class="row1"><a href="../苏宁首页(方案一)/index.html">Less项目</a></li>
 							<li class="row1"><a href="">Sass项目</a></li>
