--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
 				<div class="col-lg-3 col-md-4 col-sm-6">
 					<li class="ro"><i class="glyphicon glyphicon-hand-down"></i>作业项目
 						<ul>
-							<li class="row1 "><a href="../美的官网/index.html">美的官网</a></li>
-							<li class="row1"><a href="../回顾曾经的项目/music.html">有声相册</a></li>
-							<li class="row1"><a href="../回顾曾经的项目/表单.html">表单</a></li>
-							<li class="row1"><a href="../回顾曾经的项目/成绩表.html">成绩单</a></li>
+							<li class="row1 "><a href="美的官网/index.html">美的官网</a></li>
+							<li class="row1"><a href="回顾曾经的项目/music.html">有声相册</a></li>
+							<li class="row1"><a href="回顾曾经的项目/表单.html">表单</a></li>
+							<li class="row1"><a href="回顾曾经的项目/成绩表.html">成绩单</a></li>
 						</ul>
 					</li>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6">
 					<li class="ro"><i class="glyphicon glyphicon-hand-down"></i>作业项目
 						<ul>
-							<li class="row1 "><a href="../美的官网/index.html">美的官网</a></li>
+							<li class="row1 "><a href="美的官网/index.html">美的官网</a></li>
 							<li class="row1"><a href="">1</a></li>
 							<li class="row1"><a href="">1</a></li>
 							<li class="row1"><a href="">1</a></li>
